# YAM2

./: .SRCINFO  .ccls  .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md
cmake/Modules/: Findnlopt.cmake
examples/: CMakeLists.txt  m2.cc  m2ccons.cc  m2cons.cc  m2consvertex.cc  m2consvertex_ineq.cc  m2vertex  m2vertex.cc  m2vertex_ineq.cc
include/YAM2/: constraint.h  input.h  momentum.h  yam2.h
src/: CMakeLists.txt  constraint.cc  constraint.h  gradient.cc  gradient.h  input.cc  input.h  invisibles.cc  invisibles.h  momentum.cc  momentum.h  object.cc  object.h  variables.h  yam2.cc  yam2.h
